--- a/res/drawable/roundededge.xml
+++ b/res/drawable/roundededge.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android">
     
     <solid android:color="#FFFFFF" />
-    <corners android:radius="5px" />
+    <corners android:radius="5dp" />
     <padding 
     	android:left="0dp"
     	android:top="0dp"
