--- a/res/drawable/roundededittext.xml
+++ b/res/drawable/roundededittext.xml
@@ -3,10 +3,10 @@
 	xmlns:android="http://schemas.android.com/apk/res/android">
     
     <solid android:color="#FFFFFF" />
-    <corners android:radius="15px" />
+    <corners android:radius="15dp" />
     <padding 
-    	android:left="5px"
-    	android:top="2px"
-    	android:right="5px"
-    	android:bottom="2px" /> 
+    	android:left="5dp"
+    	android:top="2dp"
+    	android:right="5dp"
+    	android:bottom="2dp" /> 
 </shape>
