--- a/res/layout/footer_template.xml
+++ b/res/layout/footer_template.xml
@@ -10,12 +10,12 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:background="@drawable/roundededge"
-		android:layout_marginRight="5px"
-		android:layout_marginLeft="5px" 
-		android:paddingLeft="5px"
-		android:paddingRight="5px"
-		android:layout_marginTop="5px" 
-		android:layout_marginBottom="5px"
+		android:layout_marginRight="5dp"
+		android:layout_marginLeft="5dp" 
+		android:paddingLeft="5dp"
+		android:paddingRight="5dp"
+		android:layout_marginTop="5dp" 
+		android:layout_marginBottom="5dp"
 		android:orientation="horizontal">
 		
 		<ImageView
@@ -33,7 +33,7 @@
        		android:clipChildren="true" 
        		android:fadingEdge="none" 
        		android:clipToPadding="true" 
-       		android:paddingRight="15px">
+       		android:paddingRight="15dp">
        	
        		<LinearLayout
        			android:layout_width="fill_parent"
@@ -41,8 +41,8 @@
        			android:orientation="horizontal">
        		
 	       		<Button
-       				android:layout_marginTop="5px"
-					android:layout_marginBottom="5px"
+       				android:layout_marginTop="5dp"
+					android:layout_marginBottom="5dp"
 	       			android:id="@+id/settingsCard"
 					android:background="@drawable/configurecards"
 					android:layout_width="wrap_content"
@@ -52,8 +52,8 @@
 					android:id="@+id/table"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
-					android:paddingTop="5px"
-					android:paddingBottom="5px"
+					android:paddingTop="5dp"
+					android:paddingBottom="5dp"
 					android:orientation="horizontal">
 			
 					<TableRow
@@ -68,7 +68,7 @@
 		<ImageView
 			android:layout_width="wrap_content"
 			android:layout_height="fill_parent"
-			android:layout_marginLeft="-15px"
+			android:layout_marginLeft="-15dp"
 			android:background="@drawable/scroll_right" />
 	</LinearLayout>
 	
@@ -84,38 +84,38 @@
 			android:background="@drawable/locations"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content" 
-			android:layout_marginTop="3px"
-			android:layout_marginBottom="3px" />
+			android:layout_marginTop="3dp"
+			android:layout_marginBottom="3dp" />
 	
 		<Button
 			android:id="@+id/restaurantButton"
 			android:background="@drawable/restaurant"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content" 
-			android:layout_marginTop="3px"
-			android:layout_marginBottom="3px" />
+			android:layout_marginTop="3dp"
+			android:layout_marginBottom="3dp" />
 		<Button
 			android:id="@+id/cuisineButton"
 			android:background="@drawable/cuisine"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginTop="3px"
-			android:layout_marginBottom="3px" />
+			android:layout_marginTop="3dp"
+			android:layout_marginBottom="3dp" />
 		
 		<Button
 			android:id="@+id/favoriteButton"
 			android:background="@drawable/favorite"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginTop="3px"
-			android:layout_marginBottom="3px" />
+			android:layout_marginTop="3dp"
+			android:layout_marginBottom="3dp" />
 	
 		<Button
 			android:id="@+id/augmentedButton"
 			android:background="@drawable/arfooter"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginTop="3px"
-			android:layout_marginBottom="3px" />
+			android:layout_marginTop="3dp"
+			android:layout_marginBottom="3dp" />
 	</LinearLayout>
 </LinearLayout>
