--- a/res/layout/twitter.xml
+++ b/res/layout/twitter.xml
@@ -12,7 +12,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content" 
 		android:layout_gravity="center_vertical|center_horizontal"
-		android:layout_marginTop="5px">
+		android:layout_marginTop="5dp">
 		
 		<ImageView 
 			android:layout_height="wrap_content"
@@ -25,25 +25,25 @@
 		android:layout_height="wrap_content"
 		android:background="@drawable/roundededge"
 		android:orientation="vertical"
-		android:layout_marginLeft="5px"
-		android:layout_marginRight="5px">
+		android:layout_marginLeft="5dp"
+		android:layout_marginRight="5dp">
 		
 		<!-- Username -->
 		<LinearLayout
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal" 
-			android:paddingBottom="15px" 
-			android:paddingTop="15px">
+			android:paddingBottom="15dp" 
+			android:paddingTop="15dp">
 			
 			<TextView 
 				android:id="@+id/twitterUsernameTextView"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="Username"
-				android:layout_marginRight="10px" 
-				android:layout_marginLeft="10px" 
-				android:textSize="17px" 
+				android:layout_marginRight="10dp" 
+				android:layout_marginLeft="10dp" 
+				android:textSize="17dp" 
 				android:typeface="sans" 
 				android:textColor="@color/COLOR_LIGHT_GRAY"/>
 				
@@ -54,13 +54,13 @@
 				android:background="@drawable/roundededittext" 
 				android:lines="1" 
 				android:singleLine="true" 
-				android:layout_marginRight="10px" 
+				android:layout_marginRight="10dp" 
 				android:typeface="sans" />
 		</LinearLayout>
 		
 		<View
 			android:layout_width="fill_parent"
-			android:layout_height="1px"
+			android:layout_height="1dp"
 			android:background="@color/COLOR_LINE"/>
 		
 		<!-- Password -->
@@ -68,17 +68,17 @@
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal" 
-			android:paddingTop="15px" 
-			android:paddingBottom="15px">
+			android:paddingTop="15dp" 
+			android:paddingBottom="15dp">
 			
 			<TextView 
 				android:id="@+id/twitterPasswordTextView"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="Password"
-				android:layout_marginRight="13px" 
-				android:layout_marginLeft="10px" 
-				android:textSize="17px" 
+				android:layout_marginRight="13dp" 
+				android:layout_marginLeft="10dp" 
+				android:textSize="17dp" 
 				android:typeface="sans" 
 				android:textColor="@color/COLOR_LIGHT_GRAY"/>
 				
@@ -90,13 +90,13 @@
 				android:lines="1" 
 				android:singleLine="true" 
 				android:password="true" 
-				android:layout_marginRight="10px" 
+				android:layout_marginRight="10dp" 
 				android:typeface="sans" />
 		</LinearLayout>
 		
 		<View
 			android:layout_width="fill_parent"
-			android:layout_height="1px"
+			android:layout_height="1dp"
 			android:background="@color/COLOR_LINE"/>
 		
 		<!-- Tweet -->
@@ -104,18 +104,18 @@
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal" 
-			android:paddingBottom="15px" 
-			android:paddingTop="15px">
+			android:paddingBottom="15dp" 
+			android:paddingTop="15dp">
 			
 			<TextView 
 				android:id="@+id/twitterTweetTextView"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="Tweet"
-				android:layout_marginLeft="10px" 
-				android:textSize="17px" 
+				android:layout_marginLeft="10dp" 
+				android:textSize="17dp" 
 				android:typeface="sans" 
-				android:layout_marginRight="43px" 
+				android:layout_marginRight="43dp" 
 				android:textColor="@color/COLOR_LIGHT_GRAY"/>
 				
 			<EditText 
@@ -123,16 +123,16 @@
 				android:layout_width="fill_parent"
 				android:layout_height="wrap_content"
 				android:background="@drawable/roundededittext" 
-				android:height="100px" 
+				android:height="100dp" 
 				android:gravity="top" 
 				android:typeface="sans" 
-				android:layout_marginRight="10px" 
+				android:layout_marginRight="10dp" 
 				android:maxLength="120"/>
 		</LinearLayout>
 		
 		<View
 			android:layout_width="fill_parent"
-			android:layout_height="1px"
+			android:layout_height="1dp"
 			android:background="@color/COLOR_LINE"/>
 			
 		<!-- Best SG Deals -->
@@ -140,24 +140,24 @@
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal" 
-			android:paddingBottom="15px" 
-			android:paddingTop="15px">
+			android:paddingBottom="15dp" 
+			android:paddingTop="15dp">
 			
 			<TextView 
 				android:id="@+id/twitterExtraText"
 				android:layout_width="fill_parent"
 				android:layout_height="wrap_content"
 				android:textColor="@color/COLOR_SUBTEXT" 
-				android:layout_marginLeft="10px" 
-				android:layout_marginRight="10px" 
-				android:textSize="17px" 
+				android:layout_marginLeft="10dp" 
+				android:layout_marginRight="10dp" 
+				android:textSize="17dp" 
 				android:typeface="sans" 
 				android:text="#Singtel #ILoveDeals"/>
 		</LinearLayout>
 		
 		<View
 			android:layout_width="fill_parent"
-			android:layout_height="1px"
+			android:layout_height="1dp"
 			android:background="@color/COLOR_LINE"/>
 		
 		<!-- Submit -->
@@ -165,8 +165,8 @@
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal"
-			android:paddingBottom="15px" 
-			android:paddingTop="15px">
+			android:paddingBottom="15dp" 
+			android:paddingTop="15dp">
 			
 			<Button
 			android:id="@+id/twitterSubmitButton"
@@ -176,7 +176,7 @@
 				android:text="Submit"
 				android:textColor="@color/COLOR_LIGHTBLUE" 
 				android:typeface="sans" 
-				android:textSize="17px" 
+				android:textSize="17dp" 
 				android:textStyle="bold" />
 		</LinearLayout>
 	</LinearLayout>
